<resources>
    <string name="app_name">Robot</string>

    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="right">Right</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="speed">Speed :</string>
    <string name="servo_1">Servo 1 :</string>
    <string name="servo_2">Servo 2 :</string>
    <string name="servo_3">Servo 3 :</string>
    <string name="title_activity_controller">Controller</string>
    <string name="led_control">LED Control</string>
    <string name="brightness">Brightness</string>

</resources>
